[ThinSensors] depletion voltage calculation

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -409,3 +409,14 @@ author = "F. Krummenacher",
       title          = "Open Inventor Website",
       url            = "http://www.openinventor.com"
 }
+
+@article{Cranmer:2012sba,
+      author         = "Cranmer, Kyle and Lewis, George and Moneta, Lorenzo and
+                        Shibata, Akira and Verkerke, Wouter",
+      title          = "{HistFactory: A tool for creating statistical models for
+                        use with RooFit and RooStats}",
+      collaboration  = "ROOT",
+      year           = "2012",
+      reportNumber   = "CERN-OPEN-2012-016",
+      SLACcitation   = "%%CITATION = CERN-OPEN-2012-016;%%"
+}
